Feature/add direct dependency sca (#158)
* adding agent to scan create + first version to handle scanning from a non git repo

* removing unwanted reference to workspace

* adding desired behaviour for non git project

* try fix for scan test

* adding groupBy direct dependency

* adding groupBy direct dependency

* merge with main

* applying correct order to the sca_type groupby

* fix test sca panel

Co-authored-by: Pedro Lopes <Pedro.Lopes@checkmarx.com>
Co-authored-by: Pedro Lopes <83576881+pedrompflopes@users.noreply.github.com>