@@ -8,7 +8,7 @@ import java.util.List;
 import java.util.function.Function;
 
 /**
- * Enum for filters, currently only supports by severity.
+ * Enum for filters.
  * This corresponds to the parent nodes in the tree for each result.
  */
 public enum GroupBy {
@@ -16,10 +16,12 @@ public enum GroupBy {
     STATE,
     FILE,
     VULNERABILITY_TYPE_NAME,
-    PACKAGE;
+    PACKAGE,
+    DIRECT_DEPENDENCY,
+    SCA_TYPE;
 
-    public static final List<GroupBy> DEFAULT_GROUP_BY = Arrays.asList(SEVERITY, VULNERABILITY_TYPE_NAME, PACKAGE);
-    public static final List<GroupBy> HIDDEN_GROUPS = List.of(PACKAGE);
+    public static final List<GroupBy> DEFAULT_GROUP_BY = Arrays.asList(SEVERITY, VULNERABILITY_TYPE_NAME,PACKAGE);
+    public static final List<GroupBy> HIDDEN_GROUPS = List.of(SCA_TYPE,PACKAGE);
 
     /**
      * @return function to apply to a result for getting the parent, that matches the filter
@@ -39,6 +41,18 @@ public enum GroupBy {
         }
         if (this == PACKAGE) {
             return (result) -> result.getData().getPackageIdentifier();
+        }
+        if (this == DIRECT_DEPENDENCY) {
+            return (result) -> {
+                String r = "";
+                if(result.getData().getScaPackageData()!=null){
+                    r = result.getData().getScaPackageData().getTypeOfDependency() ;
+                }
+                return r;
+            };
+        }
+        if (this == SCA_TYPE) {
+            return (result) -> result.getScaType();
         }
         throw new RuntimeException("Invalid filter");
     }
@@ -60,6 +74,12 @@ public enum GroupBy {
             return String::compareTo;
         }
         if (this == PACKAGE) {
+            return String::compareTo;
+        }
+        if (this == DIRECT_DEPENDENCY) {
+            return String::compareTo;
+        }
+        if (this == SCA_TYPE) {
             return String::compareTo;
         }
         return null;
